--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.2.2",
-    "react": "^16.5.2",
+    "@material-ui/icons": "^3.0.1",
+    "classnames": "^2.2.6",
+    "firebase": "^5.5.7",
+    "material-ui": "^0.20.2",
+    "react": "^16.6.1",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
